--- a/Rcode/length_age_comps/rec_ages.Rmd
+++ b/Rcode/length_age_comps/rec_ages.Rmd
@@ -17,9 +17,9 @@ library(pacfintools)
 *if there are no new CA age data since 2016, then dont worry about it*
 
 Load in all data sources
-1. CA ages from Julia: "CRFS_ages_yeye"
-2. OR ages from Ali: "OR_non_standard_yelloweye_2009-2016_nonconfid"
-3. WA ages from RecFin
+1. CA ages from Julia: "CRFS_ages_yeye" * no updates
+2. OR ages from Ali: "OR_non_standard_yelloweye_2009-2016_nonconfid" * no updates
+3. WA ages from RecFin * updated in March
 
 Fleets:
 3 - CA_REC *need to calculate sample sizes
@@ -151,7 +151,7 @@ ca_rec_maal <- get_raw_comps(
   data = ca_ages_raw,
   comp_bins = seq(0, 65, 1),
   comp_column_name = "age",
-  input_n_method = "total_samples",
+  input_n_method = c("total_samples"),
   two_sex_comps = FALSE,
   month = 7,
   fleet = -3,
@@ -292,7 +292,7 @@ or_rec_maal <- get_raw_comps(
   data = or_ages_raw,
   comp_bins = seq(0, 65, 1),
   comp_column_name = "age",
-  input_n_method = "total_samples",
+  input_n_method = c("total_samples"),
   two_sex_comps = FALSE,
   month = 7,
   fleet = -6,
